[project]
name = "pytwelvedata"
version = "0.0.1"
authors = [
  { name="Andrew Gould", email="author@example.com" },
]
description = "A naive wrapper for TwelveData's financial data API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"